--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,14 +366,8 @@ figure:hover img {
 }
 
 .buttonText{
-	color:white;
-	align-items:center;
-	justify-content:center;
+	font-size: 50px;
 	text-transform:uppercase;
-	top:50%;
-	position:static;
-	font-size:3em;
-	padding:0.5em;
 	text-shadow:0px 0px  10px cyan,
 	0px 0px  40px cyan,
 	0px 0px  80px purple,
